# QCT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api.cpp  api.h  main.cpp
algorithms/: CMakeLists.txt  Compositor.cpp  Compositor.h  Tile.cpp  Tile.h
algorithms/common/: error.h
algorithms/tree/: CMakeLists.txt  CompositorTree.cpp  CompositorTree.h
algorithms/tree/common/: TreeDiagram.h
algorithms/tree/graph/construct/: README.md
algorithms/tree/graph/optimize/: README.md  Untitled.ipynb  create_tree.py  graph.py  input.csv  node8.csv  out.csv  out2.csv  out3.csv  tree_test.ipynb
algorithms/tree/graph/optimize/.ipynb_checkpoints/: create_tree-checkpoint.py  tree_test-checkpoint.ipynb
algorithms/visit/: .dir-locals.el  CMakeLists.txt  CompositorVisIt.cpp  CompositorVisIt.h  README.md  avtSLIVRImgMetaData.C  avtSLIVRImgMetaData.h
cmake/: packages.cmake
common/: TreeDiagram.h
engine/: avtSLIVRImgMetaData.h
example/: CMakeLists.txt  main.cpp
example/simple/: main.cpp
example/utils/: image.h  timer.cpp  utilities.h
example/volume/: common.h  main.cpp  volume.h
example/volume/source/: sourceDummy.h
graph/: README.md
hostnames/: gethostname.sh  runscript.sh
hostnames/knl/: hostname.0.txt  hostname.1.txt  hostname.10.txt  hostname.100.txt  hostname.101.txt  hostname.102.txt  hostname.103.txt  hostname.104.txt  hostname.105.txt  hostname.106.txt  hostname.107.txt  hostname.108.txt  hostname.109.txt  hostname.11.txt  hostname.110.txt  hostname.111.txt  hostname.112.txt  hostname.113.txt  hostname.114.txt  hostname.115.txt  hostname.116.txt  hostname.117.txt  hostname.118.txt  hostname.119.txt  hostname.12.txt  hostname.120.txt  hostname.121.txt  hostname.122.txt  hostname.123.txt  hostname.124.txt  hostname.125.txt  hostname.126.txt  hostname.127.txt  hostname.128.txt  hostname.129.txt  hostname.13.txt  hostname.130.txt  hostname.131.txt  hostname.132.txt  hostname.133.txt  (+216 more)
hostnames/skx/: hostname.0.txt  hostname.1.txt  hostname.10.txt  hostname.100.txt  hostname.101.txt  hostname.102.txt  hostname.103.txt  hostname.104.txt  hostname.105.txt  hostname.106.txt  hostname.107.txt  hostname.108.txt  hostname.109.txt  hostname.11.txt  hostname.110.txt  hostname.111.txt  hostname.112.txt  hostname.113.txt  hostname.114.txt  hostname.115.txt  hostname.116.txt  hostname.117.txt  hostname.118.txt  hostname.119.txt  hostname.12.txt  hostname.120.txt  hostname.121.txt  hostname.122.txt  hostname.123.txt  hostname.124.txt  hostname.125.txt  hostname.126.txt  hostname.127.txt  hostname.13.txt  hostname.14.txt  hostname.15.txt  hostname.16.txt  hostname.17.txt  hostname.18.txt  hostname.19.txt  (+88 more)
output/: composed.ppm
qct/: api.cpp
utils/: color.h  commandline.h  image.cpp  timer.cpp  timer.h  utilities.h
visit/: avtSLIVRImgCommunicator.C  avtSLIVRImgCommunicator.h
